# End-to-end-encryption

./: .gitignore  CMakeLists.txt  README.md
include/: bigint.h  ecc_encryption.h  ecc_keypair.h  ecdh.h  ecdsa.h  elliptic_curve.h  hash.h  utils.h
src/: main.cpp
